--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           
         </div>
 
-        <div class="oiio-app" data-type="Output">
+        <div class="output" data-type="Output">
         </div>
 
         <div class="code-editor" data-type="OIIO">
@@ -124,6 +124,7 @@
     <script src="libs/js-yaml.min.js"></script>
     <script src="libs/ace/ace.js"></script>
     <script src="libs/video.js"></script>
+    <script src="libs/three.min.js"></script>
 <!-- 
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
